--- a/poe-race-analysis/legacy/all-diagrams-include.html
+++ b/poe-race-analysis/legacy/all-diagrams-include.html
@@ -10,7 +10,7 @@
         .carousel-control.left, .carousel-control.right {top:50%; bottom:50%; background-image: none !important} 
         .glyphicon {color:#32a251 !important;}
     </style>
-    <title>PoE Race Analysis</title></head>
+    <title>Path of Exile Analysis</title></head>
 <body>
 
     <div class="container">
@@ -29,7 +29,7 @@
             </a>
         </div>
     <footer style="text-align:center; font-size:small">
-        <p>Analysis of <a href="http://www.pathofexile.com/forum/view-thread/1841349">Legacy League</a>. By ptt.frmr. Charts generated with PyGal</p></footer>
+        <p>Analysis of <a href="http://www.pathofexile.com/forum/view-thread/1841349">Legacy League</a>. By ptt.frmr</p></footer>
     </div>
     </body>
 </html>
